add set status
