# service/status.go
@@ -2,6 +2,7 @@ package service
 
 import (
 	"context"
+	"log"
 
 	"github.com/golang/protobuf/ptypes/empty"
 	"github.com/grpc-ecosystem/grpc-gateway/runtime"
@@ -25,16 +26,23 @@ func NewStatusService() (middleware.APIService, error) {
 // GetStatus shows infra maintenance status.
 func (s *statusImpl) GetStatus(ctx context.Context, _ *empty.Empty) (*v1.InfraStatus, error) {
 	infraStatus := v1.InfraStatus{
-		Maintainer:        "tmartens@redhat.com",
+		Maintainer:        "tom.martensen@redhat.com",
 		MaintenanceActive: true,
 	}
 	return &infraStatus, nil
+}
+
+func (s *statusImpl) SetStatus(ctx context.Context, infraStatus *v1.InfraStatus) (*empty.Empty, error) {
+	log.Println("New Status was set: ")
+	log.Printf(infraStatus.Maintainer, infraStatus.MaintenanceActive)
+	return &empty.Empty{}, nil
 }
 
 // Access configures access for this service.
 func (s *statusImpl) Access() map[string]middleware.Access {
 	return map[string]middleware.Access{
 		"/v1.InfraStatusService/GetStatus": middleware.Anonymous,
+		"/v1.InfraStatusService/SetStatus": middleware.Admin,
 	}
 }
 
